// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_app should match snapshot  1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": null,
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConnectWrapper
    pageProps={
      Object {
        "success": false,
      }
    }
  />
  <ConnectWrapper
    success={false}
  />
  <Container />
  <ConnectWrapper />
</Provider>
`;

exports[`_app should match snapshot if error occurs 1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": null,
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConnectWrapper
    pageProps={
      Object {
        "error": Object {
          "statusCode": 400,
        },
      }
    }
  />
  <ConnectWrapper
    error={
      Object {
        "statusCode": 400,
      }
    }
  />
  <Container />
  <ConnectWrapper />
</Provider>
`;
